Fix wave contrast error for icon color

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -431,7 +431,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .icon {
-  color: #5d789d;
+  color: #405570;
   padding-left: 10%;
 }
 
